# equi

./: README.md  api.py  demo_frontend.html  docker-compose.yml  format_context.py  load_weaviate.py  main.py  plays_to_json.py  poetry_to_json.py  pyproject.toml  shakespeare_ai.py  shakespeare_conversation.py  shakespeare_core.py  shakespeare_plays_to_json.py  shakespeare_search.py  shakespeare_semantic.py  start_api.py
