[project]
name = "equi"
version = "0.1.0"
description = "Shakespeare RAG Chatbot with Agent Architecture"
readme = "README_agents.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "weaviate-client>=4.16.5",
    "rich>=13.0.0",
    "click>=8.0.0",
    "openai>=1.0.0",
]

[project.scripts]
shakespeare-chat = "main:main"
